
add_library(
    yogacore STATIC
    yoga/Yoga.h
    yoga/algorithm/AbsoluteLayout.cpp
    yoga/algorithm/AbsoluteLayout.h
    yoga/algorithm/Align.h
    yoga/algorithm/Baseline.cpp
    yoga/algorithm/Baseline.h
    yoga/algorithm/BoundAxis.h
    yoga/algorithm/Cache.cpp
    yoga/algorithm/Cache.h
    yoga/algorithm/CalculateLayout.cpp
    yoga/algorithm/CalculateLayout.h
    yoga/algorithm/FlexDirection.h
    yoga/algorithm/FlexLine.cpp
    yoga/algorithm/FlexLine.h
    yoga/algorithm/PixelGrid.cpp
    yoga/algorithm/PixelGrid.h
    yoga/algorithm/SizingMode.h
    yoga/algorithm/TrailingPosition.h
    yoga/config/Config.cpp
    yoga/config/Config.h
    yoga/debug/AssertFatal.cpp
    yoga/debug/AssertFatal.h
    yoga/debug/Log.cpp
    yoga/debug/Log.h
    yoga/enums/Align.h
    yoga/enums/Dimension.h
    yoga/enums/Direction.h
    yoga/enums/Display.h
    yoga/enums/Edge.h
    yoga/enums/Errata.h
    yoga/enums/ExperimentalFeature.h
    yoga/enums/FlexDirection.h
    yoga/enums/Gutter.h
    yoga/enums/Justify.h
    yoga/enums/LogLevel.h
    yoga/enums/MeasureMode.h
    yoga/enums/NodeType.h
    yoga/enums/Overflow.h
    yoga/enums/PhysicalEdge.h
    yoga/enums/PositionType.h
    yoga/enums/Unit.h
    yoga/enums/Wrap.h
    yoga/enums/YogaEnums.h
    yoga/node/CachedMeasurement.h
    yoga/node/LayoutResults.cpp
    yoga/node/LayoutResults.h
    yoga/node/Node.cpp
    yoga/node/Node.h
    yoga/numeric/Comparison.h
    yoga/numeric/FloatOptional.h
    yoga/style/Style.h
    yoga/style/StyleLength.h)

target_include_directories(yogacore PUBLIC ${CMAKE_CURRENT_LIST_DIR})
